# learn-opengl

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Taskfile.yml
include/: Shader.hpp  camera.hpp  debug.hpp  mesh.hpp  model.hpp  shader.hpp
include/glad/: glad.h
include/stb_image/: stb_image.h
shaders/: light.frag  object.frag  object.vert  triangle.frag  triangle.vert
src/: Shader.cpp  debug.cpp  glad.c  main.cpp
